--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,7 @@
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           <h1 id="first-post">First Post</h1>
 <p>Let&rsquo;s make sure this thing works</p>
+<p><img src="/img/buratta-dog-elly.png" alt="dog-elly"></p>
         </div>
         <a href="/posts/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
       </div>
