--- a/public/reading/stuff-i-read/index.html
+++ b/public/reading/stuff-i-read/index.html
@@ -266,7 +266,7 @@ window.store = {
     "http:\/\/localhost:1313\/posts\/hot-takes\/": {
         "title": "Your Hot Takes Are Not Hot Takes",
         "tags": [],
-        "content": "Publish a list of your hot takes you say No. I don\u0026rsquo;t have enough courage to put all of that on the internet and hot takes are, by definition, likely to met with disagreement and in some cases offense and anger\u0026hellip;. Okay maybe I will publish some later.\n", 
+        "content": "Publish a list of your hot takes you say No. I don\u0026rsquo;t have enough courage to put all of that on the internet and hot takes are, by definition, likely to met with disagreement and in some cases offense and anger\u0026hellip;. Okay maybe I will publish some later.\nSome Hot Takes I\u0026rsquo;ve Heard (Not Necessarily Mine) No one has ever learned anything from reading antinatalism Politicians are all lizard people (okay\u0026hellip; maybe this one is actually not a hot take) ", 
         "url": "http:\/\/localhost:1313\/posts\/hot-takes\/"
     },
     
