--- a/public/reading/stuff-i-read/index.html
+++ b/public/reading/stuff-i-read/index.html
@@ -82,6 +82,9 @@
 
 
 <main><p>This is a non-exhaustive list of things(books, essays, posts, blogs, etc.) that I have read, partially or fully.</p>
+<h1 id="stuff-currently-im-reading">stuff currently I&rsquo;m reading</h1>
+<h2 id="the-sense-of-style-by-steven-pinker"><a href="https://www.goodreads.com/book/show/20821371-the-sense-of-style"  target="_blank" rel="noreferrer nofollow">The Sense of Style</a> by Steven Pinker</h2>
+<h2 id="real-world-cryptography-by-david-wong"><a href="https://www.amazon.com/Real-World-Cryptography-David-Wong/dp/1617296716"  target="_blank" rel="noreferrer nofollow">Real-World Cryptography</a> by David Wong</h2>
 <h1 id="stuff-ive-read">stuff I&rsquo;ve read</h1>
 <h2 id="james-by-percival-everett"><a href="https://www.goodreads.com/book/show/173754979-james"  target="_blank" rel="noreferrer nofollow">James</a> by Percival Everett</h2>
 <h3 id="rating-910">rating: 9/10</h3>
@@ -109,6 +112,21 @@
 <li>
 <blockquote>
 <p>She was mere surface all the way to her core</p></blockquote>
+</li>
+</ul>
+<hr>
+<h2 id="template">template</h2>
+<h2 id="title-by-author"><a href="goodreads-link" >title</a> by Author</h2>
+<h3 id="rating-910-1">rating: 9/10</h3>
+<h3 id="thoughts-1">Thoughts</h3>
+<ul>
+<li></li>
+</ul>
+<h3 id="excerpts">Excerpts</h3>
+<ul>
+<li>
+<blockquote>
+</blockquote>
 </li>
 </ul>
 </main>
@@ -308,7 +326,7 @@ window.store = {
     "http:\/\/localhost:1313\/posts\/hot-takes\/": {
         "title": "YOUR HOT TAKES ARE NOT HOT TAKES!!!!!",
         "tags": [],
-        "content": "Let\u0026rsquo;s argue about the definition of \u0026ldquo;hot take\u0026rdquo; Hot take: an opinion or statement that’s deliberately provocative, bold, or contrarian—usually expressed quickly, without much nuance, and often intended to spark debate or grab attention.\nSome signs your hot takes are not hot takes When you share them, a lot of people agree with you. Example: I like pineapple on pizza They\u0026rsquo;re boring and don\u0026rsquo;t elicit much reaction You feel comfortable sharing them at work or on first dates How do I know if my hot takes are real If you answer yes to all of the following questions, you may actually have a hot take\nAre you scared to share this opinion with other people, especially at work on first dates? Does your opinion take a clear stance on something and avoid nuance, avoiding caveats and baked-in apologies? Do people yell at you in disbelief and outrage when you share this opinion or say \u0026ldquo;wow\u0026hellip;\u0026rdquo; followed by awkward silence\u0026quot; Do you lay awake at night regretting what you said? If you answer yes to most of these, then you may actually have a hot take.\n\u0026ldquo;Publish a list of your hot takes,\u0026rdquo; you say No. I don\u0026rsquo;t have enough courage to put all of that on the internet and hot takes are, by definition, likely to met with disagreement and in some cases offense and anger\u0026hellip;. Okay maybe I will publish some later.\nSome Hot Takes I\u0026rsquo;ve Heard (Not Necessarily Mine) No one has ever learned anything from reading antinatalism Politicians are all lizard people (okay\u0026hellip; maybe this one is actually not a hot take) ", 
+        "content": "Let\u0026rsquo;s argue about the definition of \u0026ldquo;hot take\u0026rdquo; Hot take: an opinion or statement that’s deliberately provocative, bold, or contrarian—usually expressed quickly, without much nuance, and often intended to spark debate or grab attention.\nSome signs your hot takes are not hot takes When you share them, a lot of people agree with you. Example: I like pineapple on pizza They\u0026rsquo;re boring and don\u0026rsquo;t elicit much reaction You feel comfortable sharing them at work or on first dates How do I know if my hot takes are real If you answer yes to all of the following questions, you may actually have a hot take\nAre you scared to share this opinion with other people, especially at work on first dates? Does your opinion take a clear stance on something and avoid nuance, avoiding caveats and baked-in apologies? Do people yell at you in disbelief and outrage when you share this opinion or say \u0026ldquo;wow\u0026hellip;\u0026rdquo; followed by awkward silence? Do you lay awake at night regretting what you said? If you answer yes to most of these, then you may actually have a hot take.\n\u0026ldquo;Publish a list of your hot takes,\u0026rdquo; you say No. I don\u0026rsquo;t have enough courage to put all of that on the internet and hot takes are, by definition, likely to met with disagreement and in some cases offense and anger\u0026hellip;. Okay maybe I will publish some later.\nSome Hot Takes I\u0026rsquo;ve Heard (Not Necessarily Mine) No one has ever learned anything from reading antinatalism Politicians are all lizard people (okay\u0026hellip; maybe this one is actually not a hot take) ", 
         "url": "http:\/\/localhost:1313\/posts\/hot-takes\/"
     },
     
@@ -357,7 +375,7 @@ window.store = {
     "http:\/\/localhost:1313\/reading\/stuff-i-read\/": {
         "title": "Stuff I Read",
         "tags": [],
-        "content": "This is a non-exhaustive list of things(books, essays, posts, blogs, etc.) that I have read, partially or fully.\nstuff I\u0026rsquo;ve read James by Percival Everett rating: 9/10 Thoughts Lots of great perosnification and beautiful writing - \u0026ldquo;the wind became wild and stirred the fire\u0026rdquo; The magic of this book is that the author actually pulls it off. What starts as a seemingly cheap gimmick - a retelling of Hucklberry Finn from a different viewpoint with a counterveiling perspective - actually works, raises some interesting issues, and creates a compelling character arch. The book is episodic and reads like a movie script. The ending is somewaht tarentinoesque and very satisfying, but feels a bit rushed The metametanarrative is the most impressive thing about this book. The narrative being the story of James chasing freedom, the metanarrative being the book\u0026rsquo;s social comentary on slavery and racism, and the metametanarrative being the book\u0026rsquo;s implicit commentary on how slavery and more generally black people are portrayed in other media (Huckleberry Finn). That is, without Huckleberry Finn, this book is still enjoyable, but not nearly as interesting. Selected Excerpts The wind became wild and stirred the fire.\nNight felt like a different animal, its own season.\nI had to ask myself and answer honestly, How much do I want to be free?\nShe was mere surface all the way to her core\n", 
+        "content": "This is a non-exhaustive list of things(books, essays, posts, blogs, etc.) that I have read, partially or fully.\nstuff currently I\u0026rsquo;m reading The Sense of Style by Steven Pinker Real-World Cryptography by David Wong stuff I\u0026rsquo;ve read James by Percival Everett rating: 9/10 Thoughts Lots of great perosnification and beautiful writing - \u0026ldquo;the wind became wild and stirred the fire\u0026rdquo; The magic of this book is that the author actually pulls it off. What starts as a seemingly cheap gimmick - a retelling of Hucklberry Finn from a different viewpoint with a counterveiling perspective - actually works, raises some interesting issues, and creates a compelling character arch. The book is episodic and reads like a movie script. The ending is somewaht tarentinoesque and very satisfying, but feels a bit rushed The metametanarrative is the most impressive thing about this book. The narrative being the story of James chasing freedom, the metanarrative being the book\u0026rsquo;s social comentary on slavery and racism, and the metametanarrative being the book\u0026rsquo;s implicit commentary on how slavery and more generally black people are portrayed in other media (Huckleberry Finn). That is, without Huckleberry Finn, this book is still enjoyable, but not nearly as interesting. Selected Excerpts The wind became wild and stirred the fire.\nNight felt like a different animal, its own season.\nI had to ask myself and answer honestly, How much do I want to be free?\nShe was mere surface all the way to her core\ntemplate title by Author rating: 9/10 Thoughts Excerpts ", 
         "url": "http:\/\/localhost:1313\/reading\/stuff-i-read\/"
     },
     
